Adding logic to fetch jvm arguments